Added 98.css and Leaflet map script

--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -79,7 +79,7 @@ h6 {
     margin-bottom: 0;
     line-height: $leading;
     font-weight: bold;
-    color: #ffffff;
+    color: #1a1a1a;
 }
 
 h1 {
