--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,6 +4,7 @@
 @tailwind utilities;
 
 @import "normalize.css/normalize";
+@import "./vendor/98";
 
 // Site Mixins, Variables and Fonts here
 @import "./mixins";
