Added some test UI elements

--- a/src/views/web/layouts/base.pug
+++ b/src/views/web/layouts/base.pug
@@ -6,8 +6,8 @@
 block config
   - var isHome = false
   - var siteNav = 1
-  - var pageTitle = ' [sitename] '
-  - var ogDescription =  ' [desc] '
+  - var pageTitle = 'NuclearBomb.net'
+  - var ogDescription =  'Thermonuclear War at your fingertips | Global Annihilation'
   - var ogImage = `${assetPath}images/og_image.jpg`; // TODO:  This needs absolute path with full URL
 
 doctype html
