Set up nodeJS DB connections

--- a/src/views/web/layouts/base.pug
+++ b/src/views/web/layouts/base.pug
@@ -49,5 +49,4 @@ html(lang='en')
     block footer
 
     block scripts
-        script(src=require('WebScripts/main.js'))
-        script(src=require('GameScripts/game.js'))
+        script(src=require('Scripts/main.js'))
