--- a/src/views/web/pages/home/index.pug
+++ b/src/views/web/pages/home/index.pug
@@ -25,7 +25,7 @@ block content
       .window-body
         p.mb-2 Commence nuclear missile launch.
         section.field-row(style='justify-content: flex-end')
-          button Launch
+          button#btnLaunch Launch
           button Cancel
 
     div(style="margin-top: 120px")
