Added selectable countries and random bomb hit positioning

--- a/src/views/web/pages/home/index.pug
+++ b/src/views/web/pages/home/index.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base
 
 block config
   - pageTitle = ''
-  - page = ''
+  - page = 'command-center'
   - isHome = true
 
 block navbar
