Added bunker UI graphics

--- a/src/assets/styles/modules/_main-monitor.scss
+++ b/src/assets/styles/modules/_main-monitor.scss
@@ -1,5 +1,5 @@
-$monitorWidth: 1000px;
-$monitorHeight: 1000px;
+$monitorWidth: 95vw;
+$monitorHeight: 95vh;
 $screenWidth: 465px;
 $screenHeight: 415px;
 $screenTop: 36%;
