--- a/src/views/web/pages/home/index.pug
+++ b/src/views/web/pages/home/index.pug
@@ -10,37 +10,74 @@ block navbar
 
 block content
 
+  // TODO: Animate Highlitght spacebar on keyboard and bind launch to spacebar
+
   .command-bg
 
   .main-monitor
     .inner-element
-      img(src="/assets/images/wordart.png" alt="" style="max-width: 70%; margin: 0 auto; margin-top: -40px; margin-bottom: 50px;")
-      div(style="transform: scale(1.3)")
-        .window.left-20.relative(style='margin: 32px; width: 250px;')
+      img(src="/assets/images/wordart.png" alt="" style="max-width: 100%; margin: 0 auto; margin-top: -90px; margin-bottom: 60px;")
+      div(style="transform: scale(1.4)")
+        .window.left-20.relative(style='margin: 32px; width: 260px; margin-left: -35px')
           .title-bar
-            .title-bar-text
+            .title-bar-text.text-xs
               | Missile Launch Command
             .title-bar-controls
               button(aria-label='Minimize')
               button(aria-label='Maximize')
               button(aria-label='Close')
           .window-body
-            p.mb-2.text-base Commence nuclear missile launch
+            p.mb-2.text-base Commence nuclear missile launch!
             section.field-row(style='justify-content: flex-end')
-              button#btnLaunch Launch
-        .window.left-20.relative(style='margin: 32px; width: 250px;')
+              button Cancel
+              button#btnLaunch.text-red-700.font-bold Launch
+        .window.left-20.relative(style='margin: 32px; width: 250px; margin-left: -20px; margin-top: -10px')
           .title-bar
-            .title-bar-text
+            .title-bar-text.text-xs
               | Thermonuclear War Map
             .title-bar-controls
               button(aria-label='Minimize')
               button(aria-label='Maximize')
               button(aria-label='Close')
           .window-body
-            p.mb-2.text-base Go to world map
+            p.mb-2.text-base Witness Devastation and Intel
             section.field-row(style='justify-content: flex-end')
-              button#btnLaunch
-                a(href="/world") World Map
+              button Cancel
+              button#btnLaunch.font-bold
+                a.text-blue-900(href="/world") Open Map
+        
+      .sunken-panel(style='height: 190px; width: 110px; transform: scale(1.8); margin-left: 400px; margin-top: -266px;')
+        table.interactive
+          thead
+            tr
+              th Country
+              th Nuclear Strikes
+              th Current Population
+          tbody
+            tr
+              td France
+              td 2
+              td 64.5 million
+            tr
+              td USA
+              td 6
+              td 315.2 million
+            tr
+              td UK
+              td 4
+              td 59.4 million
+      //- .title-bar
+      //-   .title-bar-text A Window With A Status Bar
+      //-     .window-body
+      //-       p  There are just so many possibilities:
+      //-       ul
+      //-         li A Task Manager
+      //-         li A Notepad
+      //-         li Or even a File Explorer!
+      //-     .status-bar
+      //-       p.status-bar-field Press F1 for help
+      //-       p.status-bar-field Slide 1
+      //-       p.status-bar-field CPU Usage: 14%
 
 
   //- .px-6
