--- a/src/views/web/pages/home/index.pug
+++ b/src/views/web/pages/home/index.pug
@@ -18,7 +18,7 @@ block content
     .inner-element
       img(src="/assets/images/wordart.png" alt="" style="max-width: 100%; margin: 0 auto; margin-top: -90px; margin-bottom: 60px;")
       div(style="transform: scale(1.4)")
-        .window.left-20.relative(style='margin: 32px; width: 260px; margin-left: -35px')
+        .window.left-20.relative(style='margin: 32px; width: 260px; margin-left: -45px')
           .title-bar
             .title-bar-text.text-xs
               | Missile Launch Command
@@ -31,7 +31,7 @@ block content
             section.field-row(style='justify-content: flex-end')
               button Cancel
               button#btnLaunch.text-red-700.font-bold Launch
-        .window.left-20.relative(style='margin: 32px; width: 250px; margin-left: -20px; margin-top: -10px')
+        .window.left-20.relative(style='margin: 32px; width: 250px; margin-left: -30px; margin-top: -10px')
           .title-bar
             .title-bar-text.text-xs
               | Thermonuclear War Map
@@ -45,27 +45,31 @@ block content
               button Cancel
               button#btnLaunch.font-bold
                 a.text-blue-900(href="/world") Open Map
-        
-      .sunken-panel(style='height: 190px; width: 110px; transform: scale(1.8); margin-left: 400px; margin-top: -266px;')
+
+      .sunken-panel(style='height: 190px; width: 180px; transform: scale(1.2); margin-left: 360px; margin-top: -350px;')
         table.interactive
           thead
             tr
               th Country
-              th Nuclear Strikes
-              th Current Population
+              th Pop
+              th killed
+              th Strikes
           tbody
             tr
               td France
+              td 64 mil
+              td 14 mil
               td 2
-              td 64.5 million
             tr
               td USA
+              td 315 mil
+              td 35 mil
               td 6
-              td 315.2 million
             tr
               td UK
+              td 59 mil
+              td 9 mil
               td 4
-              td 59.4 million
       //- .title-bar
       //-   .title-bar-text A Window With A Status Bar
       //-     .window-body
