--- a/src/assets/styles/modules/_main-monitor.scss
+++ b/src/assets/styles/modules/_main-monitor.scss
@@ -18,7 +18,7 @@ $screenTop: 36%;
 }
 
 .main-monitor {
-    background-image: url('../../images/monitor-98.png');
+    background-image: url('../../images/monitor-green-nokeyboard-stickers.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -46,6 +46,23 @@ $screenTop: 36%;
     }
 }
 
+.lcd-lines {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
+    background: radial-gradient(var(--bg-color-start), var(--bg-color-end));
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-image: repeating-linear-gradient(transparent, rgba(0, 0, 0, 0.3) 0.5em);
+        opacity: 0.3;
+        pointer-events: none;
+    }
+}
 
 // Additional media queries if necessary
 @media (max-width: 1024px) {
