Monitor functionality and icons

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,6 +5,7 @@
 
 @import "normalize.css/normalize";
 @import "./vendor/98";
+@import "./vendor/xterm";
 
 // Site Mixins, Variables and Fonts here
 @import "./mixins";
